--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
@@ -90,18 +90,20 @@
                 android:id="@+id/TILRegistroClienteActivityRazonSocial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
                     android:id="@+id/ETRegistroClienteActivityRazonSocial"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:textSize="25sp"
-                    android:inputType="text"
-                    android:visibility="gone"
                     android:hint="@string/razon_social"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
                     android:singleLine="true"
-                    android:importantForAutofill="no" tools:targetApi="o" />
+                    android:textSize="18sp"
+                    android:visibility="gone"
+                    tools:targetApi="o" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
