--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
@@ -18,10 +18,7 @@
 </div>
 <body>
     @using (Html.BeginForm("CrearRequisicion", "Requisicion", FormMethod.Post))
-    {
-        @Html.HiddenFor(m => m.IdEmpresa)
-        @Html.HiddenFor(m => m.FechaRequerida)
-        @Html.HiddenFor(m => m.IdUsuarioSolicitante)
+    {      
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
@@ -39,6 +36,7 @@
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <div class="card">
                                 <div class="header">
+
                                     <strong>Crear</strong> nueva requisición
                                 </div>
                                 <div class="body">
@@ -56,6 +54,7 @@
                                                             <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                         }
                                                     </select>
+
                                                 }
                                                 else
                                                 {
@@ -127,16 +126,36 @@
                                         <div class="row clearfix">
                                             <div class="col-lg-2">
                                                 <b>Tipo de compra:</b>
-                                                <select name="IdTipoProducto" id="selectTipo" class="form-control z-index show-tick" onchange='filtrarProd()'>
-                                                    <option value="0">Seleccione</option>
-                                                    <option value="2">Producto</option>
-                                                    <option value="3">Servicio</option>
+                                                <select name="IdTipoProducto" id="selectTipo" class="form-control z-index show-tick">
+                                                    @if (ViewBag.ProductoEdit != null)
+                                                    {
+                                                        foreach (var lst in ViewBag.ProductoEdit)
+                                                        {
+                                                            <option value="@lst.IdTipoProducto" selected>@lst.TipoProducto</option>
+                                                        }
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="0">Seleccione</option>
+                                                        <option value="2">Producto</option>
+                                                        <option value="3">Servicio</option>
+                                                    }
                                                 </select>
                                             </div>
                                             <div class="col-lg-4">
                                                 <b>Producto:</b>
-                                                <select id="productos" name="IdProducto" class="form-control z-index show-tick" data-live-search="true">
-                                                    <option value="0">No hay productos</option>
+                                                <select id="productos" name="IdProducto" class="form-control z-index show-tick" data-live-search="true">                                                    
+                                                    @if (ViewBag.ProductoEdit != null)
+                                                    {
+                                                        foreach (var lst in ViewBag.ProductoEdit)
+                                                        {
+                                                            <option value="@lst.IdProducto" selected>@lst.Producto</option>
+                                                        }
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="0">No hay productos</option>
+                                                    }
                                                 </select>
                                             </div>
                                             <div class="col-md-2">
@@ -148,24 +167,34 @@
                                             </div>
                                             <div class="col-lg-3">
                                                 <b>Centro de costo:</b>
-                                                <select class="form-control z-index show-tick" data-live-search="true" name="IdCentroCosto">
-                                                    <option value="0">Seleccione uno</option>
-                                                    @foreach (var lst in ViewBag.CentrosCostos)
+                                                <select class="form-control z-index show-tick" data-live-search="true" id="IdCentroCosto" name="IdCentroCosto">
+                                                    @if (ViewBag.ProductoEdit != null)
                                                     {
-                                                        if (Model != null)
+                                                        foreach (var lst in ViewBag.ProductoEdit)
                                                         {
-                                                            if (lst.IdCentroCosto == Model.IdCentroCosto)
+                                                            <option value="@lst.IdCentroCosto" selected>@lst.CentroCosto</option>
+                                                        }
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="0">Seleccione uno</option>
+                                                        foreach (var lst in ViewBag.CentrosCostos)
+                                                        {
+                                                            if (Model != null)
                                                             {
-                                                                <option value="@lst.IdCentroCosto" selected>@lst.Descripcion</option>
+                                                                if (lst.IdCentroCosto == Model.IdCentroCosto)
+                                                                {
+                                                                    <option value="@lst.IdCentroCosto" selected>@lst.Descripcion</option>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
+                                                                }
                                                             }
                                                             else
                                                             {
                                                                 <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
                                                             }
-                                                        }
-                                                        else
-                                                        {
-                                                            <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
                                                         }
                                                     }
                                                 </select>
@@ -176,15 +205,26 @@
                                             <div class="col-md-8">
                                                 <b>Aplicación:</b>
                                                 <div class="form-group">
-                                                     @Html.TextBoxFor(m => m.Aplicacion, new { @class = "form-control"})
+                                                    @if (ViewBag.ProductoEdit != null)
+                                                    {
+                                                        foreach (var lst in ViewBag.ProductoEdit)
+                                                        {
+                                                        @*@Html.LabelFor(model => model.Aplicacion, lst.Aplicacion, new { @class = "form-control" })*@
+                                                            <input type="text" value="@lst.Aplicacion" name="Aplicacion" readonly="readonly" class = "form-control"/>
+                                                        }
+                                                    }
+                                                    else
+                                                    {
+                                                        @Html.TextBoxFor(m => m.Aplicacion, new { @class = "form-control" })
+                                                    }
                                                     @*<input type="text" placeholder="Comentarios..." Class="form-control" name="Aplicacion" />*@
                                                 </div>
                                                 @*<asp:Label runat="server" ID="reqApli" CssClass="alert-danger" Visible="false" Text="Campo requerido" />*@
                                             </div>
                                             <div class="col-md-4">
                                                 <label>&nbsp; </label>
-                                                <div class="form-group">                                                  
-                                                        <input type="submit" value="Agregar" formaction="Agregar" class="btn btn-danger btn-simple btn-round btn-sm" />
+                                                <div class="form-group">
+                                                    <input type="submit" value="Agregar" formaction="Agregar" class="btn btn-danger btn-simple btn-round btn-sm" />
                                                 </div>
                                             </div>
                                         </div>
@@ -218,11 +258,11 @@
                                                                 <td>@prodReq.Aplicacion</td>
                                                                 <td>@prodReq.CentroCosto</td>
                                                                 <td>
-                                                                    @*<a ID="lbEdit" href="@Url.Action("Editar", "Requisicion" , new { id=prodReq.IdProducto })">
+                                                                    <a onclick="hideField();" href="@Url.Action("Editar", "Requisicion" , new { id=prodReq.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">edit</i>
-                                                                        <span class="icon-name"></span>
-                                                                    </a>*@
-                                                                    <a ID="lbBorrar" href="@Url.Action("Borrar", "Requisicion" , new { id=prodReq.IdProducto })">
+                                                                        <span>Editar</span>
+                                                                    </a>
+                                                                    <a href="@Url.Action("Borrar", "Requisicion" , new { id=prodReq.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">delete</i>
                                                                         <span>Eliminar</span>
                                                                     </a>
