--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/SPAnticipoTablaActivityFechaCorte"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
+                android:padding="9dp"
                 android:visibility="gone" />
 
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -151,20 +151,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text="@string/Final"
-                        android:textSize="18sp" />
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTableActivityFinal"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text=""
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -173,20 +174,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text="@string/anticipos"
-                        android:textSize="18sp" />
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTableActivityAnticipos"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text=""
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 </TableRow>
@@ -201,20 +203,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text="@string/inicial"
-                        android:textSize="18sp" />
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTableActivityInicial"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text=""
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -223,20 +226,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2sp"
+                        android:paddingBottom="2sp"
                         android:text="@string/monto_corte"
-                        android:textSize="18sp" />
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTableMontoDeCorte"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text=""
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
                 </TableRow>
 
@@ -251,20 +255,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text="@string/litros"
-                        android:textSize="18sp" />
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTableActivityLitros"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:text=""
-                        android:textSize="18sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <Space
