--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_ver_reporte.xml
@@ -28,20 +28,25 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="100sp"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/BtnVerReporteActivityTerminar"
+                    style="@style/SagasTheme.Button"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginBottom="5sp"
                     android:layout_weight="2"
+                    android:background="@drawable/ripple_effect"
                     android:backgroundTint="@color/colorButtonLogin"
                     android:drawableStart="@drawable/ic_go_back_dark"
+                    android:padding="2sp"
                     android:text="@string/terminar"
-                    style="@style/SagasTheme.Button"
-                    android:background="@drawable/ripple_effect"
-                    android:textSize="24sp"
+                    android:textSize="14sp"
                     android:visibility="gone"
                     tools:ignore="ButtonStyle,UnusedAttribute" />
 
@@ -50,12 +55,15 @@
                     style="@style/SagasTheme.Button"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5sp"
+                    android:layout_marginLeft="2sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginRight="2sp"
+                    android:layout_marginBottom="5sp"
                     android:layout_weight="2"
                     android:background="@drawable/ripple_effect"
                     android:text="@string/imprimir_reporte"
                     android:textColor="@color/colorTextButtonLogin"
-                    android:textSize="24sp"
+                    android:textSize="14sp"
                     tools:ignore="ButtonStyle,UnusedAttribute" />
             </LinearLayout>
 
