JOTM-22/11/2018-Cambios en registros de anticipos y cortes
* Agrega campo de piker de fecha corte y anticipo

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,9 +31,43 @@
                 android:padding="9dp"
                 android:visibility="gone" />
 
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/TVAnticipoTablaActivityFecha"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="16dp"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/IBAnticipotABLAactivityFecha"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/IBAnticipotABLAactivityFecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginRight="2dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:padding="5sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/TVAnticipoTablaActivityFecha"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/calendar"
+                    tools:ignore="ContentDescription,UnusedAttribute" />
+            </android.support.constraint.ConstraintLayout>
+
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="200sp"
+                android:layout_height="185sp"
                 android:scrollbars="vertical"
                 tools:ignore="NestedScrolling">
 
@@ -129,8 +164,10 @@
                         android:ems="10"
                         android:inputType="numberDecimal"
                         android:textAlignment="textEnd"
+                        android:contentDescription=""
                         android:textSize="24sp"
-                        tools:ignore="Autofill,LabelFor" />
+                        tools:ignore="Autofill,LabelFor"
+                        android:gravity="end" />
                 </TableRow>
 
             </TableLayout>
