CJAL-23/11/2018- ajustes Reportes Caja general, anticipos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Estacion.cshtml
@@ -68,7 +68,7 @@
                                     <b>Fecha de reporte:</b>
                                 </div>
                                 <div class="col-sm-3">
-                                    @Html.LabelFor(model => model.FechaAplicacion, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : @ViewBag.CajaGeneralEstacion[0].FechaAplicacion.ToString()), new { @class = "form-control" })
+                                    @Html.LabelFor(model => model.FechaAplicacion, (string)((@ViewBag.CajaGeneralEstacion == null) ? "" : @ViewBag.CajaGeneralEstacion[0].FechaAplicacion.ToShortDateString()), new { @class = "form-control" })
                                 </div>
                             </div>
                             <br />
