--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -209,7 +209,7 @@
                                                             <td>@item.FechaAplicacion</td>
                                                             <td>@item.PuntoVenta</td>
                                                             <td>@item.OperadorChoferNombre</td>
-                                                            <td>@item.TipoMovimiento</td>
+                                                            <td>@item.Concepto</td>
                                                             <td>@item.Descripcion</td>
                                                             <td>$@item.Ingreso</td>
                                                             <td>$@item.Egreso</td>
