JSA-Avance Ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -37,7 +37,15 @@
                                 </p>
                                 <div class="footer">
                                     <hr>
-                                    <ul></ul>
+                                    <ul>
+                                        <li>
+                                            <div class="demo-google-material-icon">
+                                                <a href="http://sagasapi.ddns.net:7013/SAGAS_APK/app-sagas-release.apk">
+                                                    <i class="material-icons">android</i> <span class="icon-name">(App móvil)</span>
+                                                </a>
+                                            </div>
+                                        </li>
+                                    </ul>
                                     <ul></ul>
                                 </div>
                             </div>
@@ -94,4 +102,4 @@
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
 
 @*<script src="~/assets/bundles/libscripts.bundle.js"></script>
-<script src="~/assets/bundles/vendorscripts.bundle.js"></script>  Lib Scripts Plugin Js*@
+    <script src="~/assets/bundles/vendorscripts.bundle.js"></script>  Lib Scripts Plugin Js*@
