--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
@@ -31,7 +31,7 @@
                                     <b>Empresa</b>
                                     @if (ViewBag.EsAdmin)
                                     {
-                                        <select id="ddlEmpresas" name="IdEmpresa" class="form-control selectpicker show-tick" data-live-search="true">
+                                        <select id="ddlEmpresas" name="IdEmpresa" class="form-control z-index show-tick" data-live-search="true">
                                             @foreach (var lst in ViewBag.Empresas)
                                             {
                                                 <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
@@ -49,7 +49,7 @@
                             <div class="row clearfix">
                                 <div class="col-md-4">
                                     <b>Tipo de proveedor</b>
-                                    <select name="IdTipoProveedor" class="form-control selectpicker show-tick" data-live-search="true">
+                                    <select name="IdTipoProveedor" class="form-control z-index show-tick" data-live-search="true">
                                         @foreach (var cc in ViewBag.TipoProveedores)
                                         {
                                             if (Model != null && cc.IdTipoProveedor == Model.IdTipoProveedor)
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <b>Cuenta contable</b>
-                                    <select name="IdCuentaContable" class="form-control selectpicker show-tick" data-live-search="true">
+                                    <select name="IdCuentaContable" class="form-control z-index show-tick" data-live-search="true">
                                         @foreach (var cc in ViewBag.CuentasContables)
                                         {
                                             if (Model != null && cc.IdCuentaContable == Model.IdCuentaContable)
@@ -115,7 +115,7 @@
                                         @Html.ValidationMessageFor(m => m.Vende, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
-                            </div>
+                            </div>                         
                         </div>
                     </div>
                 </div>
@@ -399,7 +399,7 @@
                             <div class="row clearfix">
                                 <div class="col-md-3">
                                     <b>Tipo persona</b>
-                                    <select name="IdTipoPersona" class="form-control selectpicker show-tick" data-live-search="true">
+                                    <select name="IdTipoPersona" class="form-control z-index show-tick" data-live-search="true">
                                         @foreach (var cc in ViewBag.TipoPersonas)
                                         {
                                             if (Model != null && cc.IdTipoPersona == Model.IdTipoPersona)
@@ -416,7 +416,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <b>Régimen Fiscal</b>
-                                    <select name="IdRegimenFiscal" class="form-control selectpicker show-tick" data-live-search="true">
+                                    <select name="IdRegimenFiscal" class="form-control z-index show-tick" data-live-search="true">
                                         @foreach (var cc in ViewBag.RegimenesFiscales)
                                         {
                                             if (Model != null && cc.IdRegimenFiscal == Model.IdRegimenFiscal)
